# Edge_AI_Android

./: .gitignore  example_camera_inference_gmm_cracks.apk  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/test_camera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tensorflow-lite/tensorflow/lite/kernels/internal/reference/: cast.h
app/src/main/cpp/tflite/: download_tflite_libs.bat  download_tflite_libs.sh
app/src/main/java/com/example/test_camera/: EdgeImpulseUploader.java  LoginActivity.java  MainActivity.kt  ProjectSelectActivity.java  Sampling.java
app/src/main/java/com/example/test_camera/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml  activity_sampling.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/test_camera/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
